HOP-107
[CLEANUP] Sonar cleanup of Database
* Make this final field static too.
* Combine catch which has the same body.
* Replace the type specification with the diamond operator.
* Add the missing @Deprecated annotation.
* Replace parameter for getNextValue method with interface "Map" rather
than the implementation "Hashtable".
* Remove this "Double" constructor.

[CLEANUP] Sonar cleanup of DatabaseMeta
* Remove this unused "DROP_TABLE_STATEMENT" private field
* Make comparator class a lambda
* Remove "clone" implementation and use a copy constructor instead.

[CLEANUP] Sonar cleanup of DatabaseMetaInformation
* Replace the type specification with the diamond operator.
* Use isEmpty() to check whether the collection is empty

[CLEANUP] Sonar cleanup of MySQLDatabaseMeta
* Add the "@Override" annotation

[CLEANUP] Sonar cleanup of SqlScriptParser
* Remove empty statement.

[CLEANUP] Sonar cleanup of HopMissingPluginsException
* Make "missingPluginDetailsList" field final.
* Provide accessors for PluginDetails class

[CLEANUP] Sonar cleanup of HopPluginLoaderException
* Make this "pluginId" field final.
* Remove "setPluginId" to make immutable

[CLEANUP] Sonar cleanup of LifecycleException
* Make this "severe" field final.

[CLEANUP]  Sonar cleanup of package.html
* Insert a <!DOCTYPE> declaration to before this <html> tag.